# hs-vinegar

./: LICENSE  README.md  stack.yaml  vinegar.cabal
src/Vinegar/Encoding/: Class.hs  Generic.hs
src/Vinegar/Encoding/Desc/: Class.hs
src/Vinegar/Schema/: Class.hs  Generic.hs
src/Vinegar/Schema/Desc/: Class.hs
test/unit/: UnitTest.hs
