Name:                   vinegar
Version:                0.0.0
Synopsis:               Multi-purpose pickling combinators
Description:
  Hereditary Substitutions with de Bruijn indexes.
License:                BSD3
Author:                 Eric McCorkle
Maintainer:             eric@metricspace.net
Stability:              Development
Category:               Languages
Build-type:             Simple
Cabal-version:          >= 1.16
Homepage:               https://github.com/saltlang/vinegar
Bug-Reports:            https://github.com/saltlang/vinegar/issues

Source-Repository head
  Type: git
  Location: git@github.com:saltlang/vinegar.git


Test-Suite UnitTest
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  Main-Is:              UnitTest.hs
  hs-source-dirs:       test/unit test/lib
  build-depends:        base >= 4.8 && < 5, Cabal >= 1.16.0, vinegar

Library
  default-language:     Haskell2010
  build-depends:        base, hashable, prelude-extras, bifunctors
  hs-source-dirs:       src/
  exposed-modules:

